--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,14 @@ body {
   color: #000000;
 }
 
+.button {
+  background-color: #4e4e4e;
+  border: none;
+  color: white;
+  padding: 10px 490px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
