--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,13 @@ body {
   font-size: 16px;
 }
 
+
+.buttonCrud {
+  border: none;
+  color: white;
+  padding: 10px 50px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
