--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@ body {
   background-color: #8b8b8b;
 }
 
+.footer{
+  background-color: rgb(0, 0, 0);
+color: rgb(255, 255, 255);
+}
+
 .navbar-custom {
   background-color: #ffffff;
 }
